--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -210,7 +210,7 @@
 \include{Acronyms} % to include Acronyms.tex
 
 % Added 11-15-13 ----------------------------------------
-\includeonly{Acronyms,Introduction,Objectives,Background_and_Theory,Methodology,Results,Summary,Appendix} 
+\includeonly{Acronyms,Introduction,Objectives,Background_and_Theory} 
 % \includeonly{Acronyms,Introduction,Objectives,Background_and_Theory,Methodology,Summary,Results,Appendix}
 
 %******************************************************************************************************
