--- a/Background_and_Theory.tex
+++ b/Background_and_Theory.tex
@@ -577,13 +577,13 @@ It is important to note that AOPs are not additive as the IOPs. Also, AOPs can n
 % ------------------------------------------
 \subsection{Deriving IOPs from AOPs}
 \label{subsec:semianalitic}
-The reflectance inversion methods\index{reflectance inversion algorithms} refer to method to derive IOPs (e.g. absorption $a$ and scattering $b$ coefficients) from AOPs (e.g. $R_{rs}$). There two kinds of inversion algorithms: empirical\index{empirical algorithms|see {reflectance inversion algorithms}} and semi-analytic algorithms\index{semi-analytic algorithms|see {reflectance inversion algorithms}}. The empirical algorithms apply simple or multiple regressions between the property of of interest and the ratios of \gls{rrs}. These kinds of algorithms tend to work only in waters with similar properties to the ones they were based on, resulting in a limited applicability. Some of the advantage of the empirical algorithms are their simplicity and rapidity in data processing. On the other hand, the semianalytical algorithms are based on solving the \gls{rte} and they can be applied to different water types \cite{Lee2002_invQAA}.
+The reflectance inversion methods\index{reflectance inversion algorithms} refer to method to derive IOPs (e.g. absorption $a$ and scattering $b$ coefficients) from AOPs (e.g. $R_{rs}$). There two kinds of inversion algorithms: empirical\index{empirical algorithms|see {reflectance inversion algorithms}} and semi-analytic algorithms\index{semi-analytic algorithms|see {reflectance inversion algorithms}}. The empirical algorithms apply simple or multiple regressions between the property of of interest and the ratios of \gls{rrs}. Examples of this algorithms are the \acrfull{oc2} and \acrfull{oc4} algorithms (see \S\ref{subsec:chlempirical}). These kinds of algorithms tend to work only in waters with similar properties to the ones they were based on, resulting in a limited applicability. Some of the advantage of the empirical algorithms are their simplicity and rapidity in data processing. On the other hand, the semianalytical algorithms are based on solving the \gls{rte} and they can be applied to different water types \cite{Lee2002_invQAA}.
 
 It is well known that the AOPs are a function of the ratio between the backscattering and the absorption coefficients, .i.e. $R_{rs}(\lambda)~or~L_{wN} = f[b_b(\lambda)/a(\lambda)]$ with $R_{rs}=L_w/E_d$ the remote-sensing reflectance and $L_{wN}$ the normalized water-leaving radiance \cite{Morel:1977rw,Maritorena:02}. As an example, \cite{Gordon:1988qv} derived this relationship as
 \begin{equation}\label{eq:semianal}
   \hat{L}_{wN} = \frac{tF_0(\lambda)}{n_w^2} \sum_{i=1}^2g_i\left[\frac{b_b(\lambda)}{b_b(\lambda)+a(\lambda)}\right]^i
 \end{equation}
-\noindent where $t$ is the sea-air transmission factor, $F_0(\lambda)$ is the extraterrestrial solar irradiance, $n_w$ is the index of refraction of the water, and the $g_i$ terms are fitting coefficients from Monte Carlo simulations of an idealized ocean by \cite{Gordon:1986fr}. If \autoref{eq:semianal} is used at first order only, the $g_1$ term becomes the $f/Q$ factor, which is dependent on the viewing geometry and not constant \cite{Maritorena:02}. Examples of semianalytical algorithms can be found in \cite{Lee2002_invQAA} and \cite{Werdell2013_inv}. Note that the IOP spectra, $a(\lambda)$ and $b_b(\lambda)$, can be decomposed in the different water constituents or \gls{cpas} (see \autoref{eq:atotal} and \autoref{eq:b_btotal}). Therefore, if all the \gls{iops} but the $b_b(\lambda)$ are known, then the $b_b(\lambda)$ can be determined from \gls{rrs} using one of these semianalytical algorithms.
+\noindent where $t$ is the sea-air transmission factor, $F_0(\lambda)$ is the extraterrestrial solar irradiance, $n_w$ is the index of refraction of the water, and the $g_i$ terms are fitting coefficients from Monte Carlo simulations of an idealized ocean by \cite{Gordon:1986fr}. If \autoref{eq:semianal} is used at first order only, the $g_1$ term becomes the $f/Q$ factor, which is dependent on the viewing geometry and not constant \cite{Maritorena:02}. Examples of semianalytical algorithms can be found in \cite{Lee2002_invQAA}, \cite{Lee_Du_Arnone2005} and \cite{Werdell2013_inv}. Note that the IOP spectra, $a(\lambda)$ and $b_b(\lambda)$, can be decomposed in the different water constituents or \gls{cpas} (see \autoref{eq:atotal} and \autoref{eq:b_btotal}). Therefore, if all the \gls{iops} but the $b_b(\lambda)$ are known, then the $b_b(\lambda)$ can be determined from \gls{rrs} using one of these semianalytical algorithms.
 
 % ------------------------------------------
 % \subsection{Constituent Retrieval}
@@ -816,11 +816,11 @@ The HydroLight physical model has the following characteristics \cite{MobleyHE}:
 The \gls{seadas} software (more info: \url{http://seadas.gsfc.nasa.gov/}) is a comprehensive image analysis package for the processing, display, analysis, and quality control of ocean color data developed by the developers of \gls{esa}'s BEAM software package (\url{http://www.brockmann-consult.de/cms/web/beam/}) and the \gls{obpg} at NASA. Its last version (\gls{seadas} 7.2), recently launched, supports Level 1 Landsat 8 data. It can generate Level 2 data from Level 0 and Level 1. The level 2 data is obtained by applying the atmospheric correction method based on \cite{Gordon:1994} to the different heritage ocean color instruments and now Landsat 8, among others. It also can generate Level 3 data, such as temporal binned data. \gls{seadas} includes some  semi-analytical bio-optical models described in \S\ref{subsec:semianalitic}.
 
 A number of standard ocean bio-optical products are supported by the \gls{obpg} at NASA's Goddard Space Flight Center (\url{http://oceancolor.gsfc.nasa.gov/}). The \gls{obpg}'s responsibilities are collection, processing, calibration, validation, archive and distribution of ocean-related products from a large number of operational, satellite-based remote-sensing missions providing ocean color, sea surface temperature and sea surface salinity data to the international research community. Most of the ocean-related products are included in the \gls{seadas} package, supported by the \gls{obpg}. The following section describes some of the products relevant to this research.
-
+% ------------------------------------------
 \subsection{Chlorophyll-{\it a} Concentration}
 \label{subsec:chlempirical}
 
-The chlorophyll-{\it a} concentration retrieval algorithms supported by \gls{seadas} are described in \cite{OReilly1998_Chl} and \cite{OReilly2000}. These include semianalytic models and empirical algorithms. The semianalytic models are based on the $b_b/(a + b_b)$ to $R_{rs}$ relationship \cite{Gordon:1988qv}. The empirical algorithms are based in band ratios \cite{OReilly2000}. One example of a empirical algorithm is the \gls{oc2} algorithm developed for \gls{seawifs}. The \gls{oc2} algorithm establishes an empirical equation relating \gls{rrs} in the $490$ and $555nm$ bands to chlorophyll-{\it a} concentrations $C_a$ from a large data set of coincident {\it in situ} remote-sensing reflectances and chlorophyll-{\it a} concentrations, $\tilde{R}_{rs}$ and $\tilde{C}_a$. This empirical equation is a \gls{mcp} defined as
+The chlorophyll-{\it a} concentration retrieval algorithms supported by \gls{seadas} are described in \cite{OReilly1998_Chl} and \cite{OReilly2000}. These include semianalytic models and empirical algorithms. The semianalytic models are based on the $b_b/(a + b_b)$ to $R_{rs}$ relationship \cite{Gordon:1988qv}  (see \S\ref{subsec:semianalitic}). The empirical algorithms are based in band ratios \cite{OReilly2000}. One example of a empirical algorithm is the \gls{oc2} algorithm developed for \gls{seawifs}. The \gls{oc2} algorithm establishes an empirical equation relating \gls{rrs} in the $490$ and $555nm$ bands to chlorophyll-{\it a} concentrations $C_a$ from a large data set of coincident {\it in situ} remote-sensing reflectances and chlorophyll-{\it a} concentrations, $\tilde{R}_{rs}$ and $\tilde{C}_a$. This empirical equation is a \gls{mcp} defined as
 \begin{equation}\label{eq:oc2}
   C_a = 10^{\displaystyle a_0+a_1R_2+a_2R_2^2+a_3R_2^3} + a_4
 \end{equation}
@@ -854,19 +854,21 @@ The \gls{oc2} algorithm utilized just a green and a blue band. Modifications to 
 \end{figure}
 
 One of the known limitations of the approach is that the data set is mostly representative of Case 1 waters and not few Case 2 waters \cite{OReilly2000}. Some modification for low $C_a$ values have been suggested by \cite{Hu:2012fv}.
-
+% ------------------------------------------
 \subsection{\acrshort{tsm}}
 
-Previous versions of SeaDAS (SeaDAS 5 and below) supported the Clark \acrfull{tsm} product. This product was dropped in SeaDAS 6.2 because the algorithm are not maintained by its original authors, and therefore, it has not been updated. The current version of SeaDAS (SeaDAS 6.2) does not include any tsm algorithm. The Clark TSM algorithm was an empirical algorithm. For \gls{modis}, the equation is defined as
+Previous versions of SeaDAS (SeaDAS 5 and earlier) supported the Clark \acrfull{tsm} product. This product was dropped in SeaDAS 6.2 because the algorithm are not maintained by its original authors, and therefore, it has not been updated. The current version of SeaDAS (SeaDAS 6.2) does not include any tsm algorithm. The Clark TSM algorithm was an empirical algorithm. For \gls{modis}, the equation is defined as
 \begin{align}
   x   &= \log_{10}\left(\frac{L_{wN}[443]+L_{wN}[490]}{L_{wN}[551]}\right)\notag \\
   tsm &= 10^{(\displaystyle a[0] + a[1]x + a[2]x^2 + a[3]x^3 + a[4]x^4 + a[5]x^5)}
 \end{align}
 \noindent where $L_{wN}$ is the normalized water leaving radiance, and the model coefficients $a[0]\dots a[5]$ are obtained from fitting a $5^{th}$ order polynomial curve to {\it in situ} \gls{tsm} concentrations versus $x$ data This kind of approach is fundamentally a regional relationship that related local concentrations with optical signatures. More info about the algorithm can be found at \url{http://oceancolor.gsfc.nasa.gov/forum/oceancolor/forum_show.pl}.
-
-
-
+% ------------------------------------------
 \subsection{$CDOM$}
+
+Previous versions of SeaDAS (SeaDAS 5 and earlier) supported the colored dissolved organic matter (CDOM) index ($cdom\_index$) product described in \cite{Morel2009_CDOM_index}. This $cdom\_index$ quantifies the deviation in the relationship between CDOM and chlorophyll concentration. $cdom\_index=1.0$ represents the mean relationship for Morel and Prieur case 1 waters \cite{Morel:1977rw}, and values above or below 1.0 indicate excess or deficit in CDOM relative to that mean relationship, respectively. The $cdom\_index$ is based on an unique relating the $R(412)/R(443)$ ratio to the $R(490)/R(555)$ ratio, where $R(\lambda)$ is spectral reflectance of the ocean at wavelength $\lambda$ derived from ocean color remote sensing data. This product was dropped from the current SeaDAS version (SeaDAS 6.2).
+
+The current SeaDAS version (SeaDAS 6.2) include semianalytic bio-optical models that can be related to CDOM (see \S\ref{subsec:semianalitic}). Examples of this models are the Garver-Siegel-Maritorena-2001 absorption due to gelbstof and detrital material at sensor wavelength nnn, ``adg\_nnn\_gsm01'' \cite{Maritorena:02}, and the Quasi-Analytical Algorithm (QAA) model absorption due to gelbstof and detrital material at sensor wavelength nnn, ``adg\_nnn\_qaa'' \cite{Lee_Du_Arnone2005}.
 
 % ----------------------------------------------------
 \section{ACOLITE}
