--- a/javier_bibPhD.bib
+++ b/javier_bibPhD.bib
@@ -2,12 +2,70 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Javier Concha First at 2015-10-11 10:30:27 -0400 
+%% Created for Javier Concha First at 2015-10-11 19:53:58 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Lee_Du_Arnone2005,
+	Author = {Lee, Z. P. and Du, K. P. and Arnone, R.},
+	Date-Added = {2015-10-11 23:50:53 +0000},
+	Date-Modified = {2015-10-11 23:53:56 +0000},
+	Doi = {10.1029/2004jc002275},
+	Issn = {0148-0227},
+	Journal = {Journal of Geophysical Research-Oceans},
+	Number = {C2},
+	Title = {A model for the diffuse attenuation coefficient of downwelling irradiance},
+	Type = {Journal Article},
+	Volume = {110},
+	Year = {2005},
+	Bdsk-Url-1 = {%3CGo%20to%20ISI%3E://WOS:000227527000003},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1029/2004jc002275}}
+
+@book{IOCCG2000_Coastal,
+	Address = {Dartmouth, Canada},
+	Author = {IOCCG},
+	Date-Added = {2015-10-11 21:55:47 +0000},
+	Date-Modified = {2015-10-11 21:55:47 +0000},
+	Editor = {Sathyendranath, S},
+	Institution = {Reports of the International Ocean-Colour Coordinating Group},
+	Number = {3},
+	Title = {Remote Sensing of Ocean Colour in Coastal, and Other Optically-Complex, Waters},
+	Year = {2000}}
+
+@article{Lee2005_Kd,
+	Author = {Lee, Z. P. and Darecki, M. and Carder, K. L. and Davis, C. O. and Stramski, D. and Rhea, W. J.},
+	Date-Added = {2015-10-11 21:51:14 +0000},
+	Date-Modified = {2015-10-11 21:52:25 +0000},
+	Doi = {10.1029/2004jc002573},
+	Issn = {0148-0227},
+	Journal = {Journal of Geophysical Research-Oceans},
+	Number = {C2},
+	Title = {Diffuse attenuation coefficient of downwelling irradiance: An evaluation of remote sensing methods},
+	Type = {Journal Article},
+	Volume = {110},
+	Year = {2005},
+	Bdsk-Url-1 = {%3CGo%20to%20ISI%3E://WOS:000227527000008},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1029/2004jc002573}}
+
+@article{Morel2009_CDOM_index,
+	Author = {Andr{\'e} Morel and Bernard Gentili},
+	Date-Added = {2015-10-11 21:29:43 +0000},
+	Date-Modified = {2015-10-11 21:30:00 +0000},
+	Doi = {http://dx.doi.org/10.1016/j.rse.2009.01.008},
+	Issn = {0034-4257},
+	Journal = {Remote Sensing of Environment},
+	Keywords = {Corrected chlorophyll},
+	Number = {5},
+	Pages = {998 - 1011},
+	Title = {A simple band ratio technique to quantify the colored dissolved and detrital organic material from ocean color remotely sensed data},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0034425709000170},
+	Volume = {113},
+	Year = {2009},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0034425709000170},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.rse.2009.01.008}}
 
 @article{OReilly1998_Chl,
 	Author = {O'Reilly, JE and Maritorena, S and Mitchell, BG and Siegel, DA and Carder, KL and Garver, SA and Kahru, M and McClain, C},
