--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -1,5 +1,5 @@
 % \documentclass[draft]{book}
-\documentclass[draft]{book}
+\documentclass[]{book}
 
 \usepackage{graphicx}
 
@@ -187,12 +187,6 @@
 \usepackage{morefloats} % for the error "Too many unprocessed floats"
 
 
-
-
-
- 
-
-
 % Added 12-03-13 ----------------------------------------
 % \usepackage{imakeidx} % to create index
 % \indexsetup{othercode=\small}
@@ -210,7 +204,7 @@
 \include{Acronyms} % to include Acronyms.tex
 
 % Added 11-15-13 ----------------------------------------
-\includeonly{Acronyms,Introduction,Objectives,Background_and_Theory} 
+\includeonly{Acronyms,Introduction,Objectives,Background_and_Theory,Methodology} 
 % \includeonly{Acronyms,Introduction,Objectives,Background_and_Theory,Methodology,Summary,Results,Appendix}
 
 %******************************************************************************************************
