First objective changed from plural to singular

--- a/Objectives.tex
+++ b/Objectives.tex
@@ -23,7 +23,7 @@ The successful completion of this research effort will be marked by completion o
 
 \subsection{Primary Requirements:}
 \begin{enumerate}
-	\item To develop over-water atmospheric correction algorithms for Landsat 8 reflective imagery.
+	\item To develop an over-water atmospheric correction algorithm for Landsat 8 reflective imagery.
 	\item To design a water constituent concentration retrieval algorithm that can be applied to a specific study area.
 	\item To validate results by comparing with {\it in situ} measurements and products from ocean color satellites.
 \end{enumerate}
@@ -42,7 +42,7 @@ The successful completion of this research effort will be marked by completion o
 
 \subsection{Primary Requirements:}
 \begin{enumerate} 
-	{\bf \item To develop over-water atmospheric correction algorithms for Landsat 8 reflective imagery.} 
+	{\bf \item To develop an over-water atmospheric correction algorithm for Landsat 8 reflective imagery.} 
 
 The first objective in this research is to identify the best approach to atmospherically correct the type of dataset provided by the OLI sensor. Two approaches were investigated. The first method is based on previous work done on simulated OLI data \cite{Gerace:2013,Gerace:2012,GeraceThesis,Pahlevan:2012} that consists of an \acrfull{elm}-based (ELM-based) method that combines the Landsat reflectance product (Landsat Surface Reflectance \acrshort{cdr};\cite{LandsatCDR}) and a physics-based numerical model for water (HydroLight;\cite{MobleyHEtech}) to determine both the bright and dark pixel reflectance. The second method is based on the methods developed for ocean color satellite based on \cite{Gordon:1994}. This method is based on the fact that the signal leaving the water does not contribute to the overall signal beyond the NIR part of the spectrum of light (black pixel assumption), so the signal reaching the sensor is caused only by atmospheric scattering. This concept can be expanded to the SWIR bands when the black pixel assumption is not valid in the NIR bands, which is the case for Case 2 and high productive Case 1 waters (\cite{Wang:2007}).
 
